clusters/production/apps/clutterstock-migrate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clutterstock-production
  labels:
    app.kubernetes.io/part-of: clutterstock-production
